fixed font overflow

--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -1,6 +1,6 @@
 .title {
-  color: white;
   font-size: 75px;
+  color: white;
   font-family: "VCR OSD Mono", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
@@ -12,7 +12,7 @@
   /* width: 20rem; */
   border: none !important;
   color: white;
-  background-color: var(--secondary-color);
+  background-color: #221c24;
   font-family: "VCR OSD Mono";
   text-transform: uppercase;
 }
@@ -20,8 +20,17 @@
 .stats > h3 {
   font-size: 40px;
   margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .statvalue {
   color: #f87591;
+}
+
+@media screen and (max-width: 896px) {
+  .title {
+    font-size: 12vw;
+  }
 }
